--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # site settings
-title: Forty
-subtitle: by HTML5 UP
+title: Daniel SG 
+subtitle: blog
 email: youremailaddress@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
+baseurl: "/site" # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
 city: Nashville
 state: TN
 zip_code: 55555
-country: United States of America
+country: France
 phone: (716) 555-5555
 
 # homepage tiles
